--- a/EasyDotNetNotification/Usercontrols/NotificationAlertControl.xaml
+++ b/EasyDotNetNotification/Usercontrols/NotificationAlertControl.xaml
@@ -4,8 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EasyDotNetNotification.Usercontrols"
-             mc:Ignorable="d" MinHeight="50" Margin="5"
-             Width="300">
+             mc:Ignorable="d" MinHeight="50" Margin="5">
 
     <Border BorderThickness="0" Background="#4b4b4b" CornerRadius="5">
         <Grid>
